<resources>
    <string name="app_name">Just Java</string>
    <string name="order">Order</string>
    <string name="pick">Pick-up</string>
    <string name="del">Delivery</string>
    <string name="pd">Pick-up or Delivery</string>
    <string name="price">(Price RS.5)</string>
    <string name="coffeetype">Cafe Latte</string>
    <string name="quantity">Quantity</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="zero">0</string>
    <string name="details">Additional Details</string>
    <string name="desc">Enter Description</string>
    <string name="Rs">Price \u20B9</string>



</resources>
