<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBG"
    tools:context="com.example.android.justjava.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/relLay">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="30dp"
            android:paddingEnd="30dp"
            android:id="@+id/textQuant"/>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_below="@id/textQuant"
            android:id="@+id/pricePick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/dec"
                android:background="@color/colorGreen"
                android:textColor="@android:color/white"
                android:onClick="decrement"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/quantity_text_view"
                android:textSize="16sp"
                android:padding="10dp"
                android:textColor="@android:color/black"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/colorGreen"
                android:textColor="@android:color/white"
                android:text="@string/inc"
                android:onClick="increment"/>

        </LinearLayout>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/latte"
            android:id="@+id/imgLatte"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imgLatte"
            android:layout_toRightOf="@+id/imgLatte"
            android:text="@string/coffeetype"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:id="@+id/texLatte"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relLay"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/details"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:textSize="15sp"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/Rs"
            android:textColor="@android:color/white"
            android:padding="15dp"
            android:id="@+id/price_text_view"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:onClick="submitOrder"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/colorGreen"/>


    </RelativeLayout>




</RelativeLayout>
